# my_daima

PartSDF-main/: .gitignore  LICENSE  README.md  check_data.py  export_mesh_variants.py  part_aware_vae_plan.md  view_samples.py
PartSDF-main/notebooks/: train_results.ipynb  train_results_baseline.ipynb
PartSDF-main/scripts/: data_fit_primitives.py  data_generate_samples.py  evaluate.py  (+10 more)
physiopt-main/physiopt-main/: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup_trellis.sh  ui_config_deepsdf.yaml
physiopt-main/physiopt-main/scripts/: my_viewer_deepsdf.py  roi_full_aware_gcmma.py  sample.py  sample_viewer.py  viewer_deepsdf.py  viewer_deepsdf_gcmma.py  viewer_deepsdf_yuan.py  viewer_trellis.py
physiopt-main/physiopt-main/src/physiopt/models/deepsdf/: deep_sdf_decoder.py  dir_info.py
physiopt-main/physiopt-main/src/physiopt/opt/: boundary.py  field.py  forces.py  materials.py  optimizer_state.py  optimizer_utils.py  solid_grid.py  trajectory.py
physiopt-main/physiopt-main/src/physiopt/structures/: deformed_mesh.py
physiopt-main/physiopt-main/src/physiopt/utils/: cube_processing.py  grid_utils.py  phys_utils.py  ps_utils.py  timer.py
physiopt-main/physiopt-main/src/physiopt/utils/chamfer_distance/: __init__.py  chamfer_distance.py
physiopt-main/physiopt-main/src/physiopt/vis/: ui_config.py  viewer_base.py  viewer_base_mma_gudingli.py  viewer_base_yuanshi.py  voxel_set.py
pytorch/: Stress_3D_Sensitivity_Comp.py  mma.py  plot_von_Mises.py  prepare_filter.py  run_stress_min.py  stress_minimize.py  test_stress_api.py
(+27 files in other folders)
