[project]
authors = [
    { name = "Clément Jambon", email = "cjambon@mit.edu" },
    { name = "Sean Zhan", email = "zhanx@mit.edu" },
]
name = "physiopt"
version = "0.0.1"
description = "PhysiOpt: Physics-Driven Shape Optimization for 3D Generative Models"
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
